# talks

fosdem-2017/: slides.html
fosdem-2017/themes/mozilla/styles/: style.css
pwe-webgl/: README.md  index.html
pwe-webgl/themes/mozilla/styles/: style.css
rustfest/: Cargo.toml  slides.list
rustfest/src/: main.rs  shaders.rs
webgl-paris-2014/: index.html
webgl-paris-2014/bench/: misc.html  vbo.html  vec3_add.html
webgl-paris-2014/scripts/: script.js
webgl-paris-2014/themes/mozilla/styles/: style.css
webgl-paris-2015/: index.html
